// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`ContentsList container matches snapshot 1`] = `
<ContentsList
  className=""
  role="navigation"
  visuallyHiddenText="Contents"
>
  <nav
    className="nhsuk-contents-list"
    role="navigation"
  >
    <h2
      className="nhsuk-u-visually-hidden"
    >
      Contents
    </h2>
    <ol
      className="nhsuk-contents-list__list"
    >
      <Item
        className=""
        current={false}
        href="#"
        id=""
        onClick={[Function]}
      >
        <li
          className="nhsuk-contents-list__item"
          id=""
        >
          <a
            className="nhsuk-contents-list__link"
            href="#"
            id="null"
            onClick={[Function]}
          >
            Test
          </a>
        </li>
      </Item>
      <Item
        className=""
        current={true}
        href="#"
        id=""
        onClick={[Function]}
      >
        <li
          className="nhsuk-contents-list__item"
          id=""
        >
          <span
            className="nhsuk-contents-list__current"
          >
            Test Text
          </span>
        </li>
      </Item>
    </ol>
  </nav>
</ContentsList>
`;

exports[`ContentsList current item matches snapshot 1`] = `
<Item
  className=""
  current={true}
  href="#"
  id=""
  onClick={[Function]}
>
  <li
    className="nhsuk-contents-list__item"
    id=""
  >
    <span
      className="nhsuk-contents-list__current"
    >
      Test Text
    </span>
  </li>
</Item>
`;

exports[`ContentsList item matches snapshot 1`] = `
<Item
  className=""
  current={false}
  href="#"
  id=""
  onClick={[Function]}
>
  <li
    className="nhsuk-contents-list__item"
    id=""
  >
    <a
      className="nhsuk-contents-list__link"
      href="#"
      id="null"
      onClick={[Function]}
    >
      Test Text
    </a>
  </li>
</Item>
`;
